Revert "msm: mdss: handle mmagic mdss axi clock for msm8996 target"
This reverts commit 832b482b621b ("msm: mdss: handle mmagic mdss
axi clock for msm8996 target"). SMMU driver adds the vote for
mmagic mdss axi clock vote which will take care of MDP and
DSI use cases. No need to put vote from individual module.

Change-Id: I858f28eb88deb34a612050d913459e62cc0955a8
Signed-off-by: Dhaval Patel <pdhaval@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8996-mdss.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-mdss.dtsi
@@ -103,10 +103,9 @@
 			 <&clock_mmss clk_mdss_axi_clk>,
 			 <&clock_mmss clk_mdp_clk_src>,
 			 <&clock_mmss clk_mdss_mdp_vote_clk>,
-			 <&clock_mmss clk_mdss_vsync_clk>,
-			 <&clock_mmss clk_mmagic_mdss_axi_clk>;
+			 <&clock_mmss clk_mdss_vsync_clk>;
 		clock-names = "iface_clk", "bus_clk", "core_clk_src",
-				"core_clk", "vsync_clk", "mmagic_mdss_axi_clk";
+				"core_clk", "vsync_clk";
 
 		qcom,mdp-settings = <0x01190 0x00000000>,
 				    <0x012ac 0xc0000ccc>,
