ARM: dts: msm: add a VDD_APCC CPR3 regulator subnode for CBF clk on msm8996
Add a cpr3-regulator device subnode which defines a new regulator
interface for thread 0 of the VDD_APCC CPR supply.  Update the
CBF clock device to use this new regulator and its independent
voltage corners.  Adjust the CBF clock frequency to voltage
corner mapping table to use CBF regulator corner values instead
of power cluster regulator corner values.

By switching the CBF clock to use a separate regulator, the power
cluster is able to utilize LDO mode when the power cluster is
operating at a lower frequency than the performance cluster.

Also relax the thread 0 power cluster floor voltages so that they
correspond exactly to the requirements of the power cluster
instead of the max of the power cluster and CBF clock
requirements.

Change-Id: Iee6f3d8c22de83b56796934d207d462318213558
Signed-off-by: David Collins <collinsd@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996.dtsi
@@ -739,9 +739,9 @@
 		      <0x00070130    0x8>,
 		      <0x09820000 0x1000>;
 		reg-names = "pwrcl_pll", "perfcl_pll", "cbf_pll", "pwrcl_mux", "perfcl_mux", "cbf_mux", "efuse", "debug";
-		vdd-pwrcl-supply = <&apc0_vreg>;
+		vdd-pwrcl-supply = <&apc0_pwrcl_vreg>;
 		vdd-perfcl-supply = <&apc1_vreg>;
-		vdd-cbf-supply = <&apc0_vreg>;
+		vdd-cbf-supply = <&apc0_cbf_vreg>;
 		vdd-dig-supply = <&pm8994_s2_corner_ao>;
 		cbf-dev = <&m4m_cache>;
 		qcom,pwrcl-speedbin0-v0 =
@@ -786,14 +786,14 @@
 		qcom,cbf-speedbin0-v0 =
 			<	   0  0 >,
 			<  307200000  2 >,
-			<  384000000  4 >,
-			<  499200000  6 >,
-			<  595200000  6 >,
-			<  691200000  8 >,
-			<  787200000  9 >,
-			<  883200000 10 >,
-			<  960000000 11 >,
-			< 1036800000 19 >;
+			<  384000000  3 >,
+			<  499200000  4 >,
+			<  595200000  5 >,
+			<  691200000  6 >,
+			<  787200000  7 >,
+			<  883200000  8 >,
+			<  960000000  9 >,
+			< 1036800000 10 >;
 		clock-names = "xo_ao", "aux_clk";
 		clocks = <&clock_gcc clk_cxo_clk_src_ao>,
 			 <&clock_gcc clk_gpll0_ao>;
