--- a/arch/arm/boot/dts/qcom/msm8996-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-regulator.dtsi
@@ -586,8 +586,8 @@
 			qcom,cpr-up-threshold = <0>;
 			qcom,cpr-down-threshold = <2>;
 
-			apc0_vreg: regulator {
-				regulator-name = "apc0_corner";
+			apc0_pwrcl_vreg: regulator-pwrcl {
+				regulator-name = "apc0_pwrcl_corner";
 				regulator-min-microvolt = <1>;
 				regulator-max-microvolt = <19>;
 
@@ -608,8 +608,8 @@
 					1015000 1015000 1015000 1015000>;
 				qcom,cpr-voltage-floor =
 					<520000  550000  555000  565000  585000
-					 635000  635000  660000  690000  730000
-					 750000  750000  760000  770000  780000
+					 615000  635000  655000  690000  720000
+					 740000  750000  760000  770000  780000
 					 790000  815000  840000  850000>;
 				qcom,corner-frequencies =
 					<192000000  268800000  307200000
@@ -619,6 +619,53 @@
 					1017600000 1113600000 1190400000
 					1267200000 1344000000 1420800000
 					1459200000>;
+
+				qcom,cpr-ro-scaling-factor =
+				      <   0    0    0    0 2222 2275 2506 2491
+				       2649 2640 2886 2866    0    0    0    0>,
+				      <   0    0    0    0 2222 2275 2506 2491
+				       2649 2640 2886 2866    0    0    0    0>,
+				      <   0    0    0    0 2222 2275 2506 2491
+				       2649 2640 2886 2866    0    0    0    0>,
+				      <   0    0    0    0 2147 2226 2310 2312
+				       2450 2447 2603 2600    0    0    0    0>,
+				      <   0    0    0    0 1989 2079 2066 2083
+				       2193 2201 2283 2296    0    0    0    0>;
+
+				qcom,cpr-open-loop-voltage-fuse-adjustment =
+					<0 0 0 0 0>;
+				qcom,cpr-closed-loop-voltage-fuse-adjustment =
+					<0 0 0 0 0>;
+
+				qcom,allow-voltage-interpolation;
+				qcom,allow-quotient-interpolation;
+				qcom,cpr-scaled-open-loop-voltage-as-ceiling;
+			};
+
+			apc0_cbf_vreg: regulator-cbf {
+				regulator-name = "apc0_cbf_corner";
+				regulator-min-microvolt = <1>;
+				regulator-max-microvolt = <10>;
+
+				qcom,cpr-pd-bypass-mask = <0x18>;
+				qcom,cpr-fuse-corners = <5>;
+				qcom,cpr-fuse-combos = <1>;
+				qcom,cpr-corners = <10>;
+
+				qcom,cpr-corner-fmax-map = <1 2 5 9 10>;
+
+				qcom,cpr-voltage-ceiling =
+				       <605000  670000  745000  745000  745000
+					905000  905000  905000  905000 1015000>;
+				qcom,cpr-voltage-floor =
+				       <520000  545000  565000  595000  635000
+					660000  690000  730000  750000  850000>;
+
+				qcom,corner-frequencies =
+					<150000000  307200000  384000000
+					 499200000  595200000  691200000
+					 787200000  883200000  960000000
+					1036800000>;
 
 				qcom,cpr-ro-scaling-factor =
 				      <   0    0    0    0 2222 2275 2506 2491
