ARM: dts: msm: change sdc2 clock driver strength for QRD MSM8952
AS eMMC CLK has overshoot on QRD MSM8952 SKUM EVT2, so change
clock driver strength from 16MA to 10 MA.

Change-Id: Ibec07b87146176387f214e48f8140025ace6793a
Signed-off-by: xiaonian <xiaonian@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8952-qrd-skum.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952-qrd-skum.dtsi
@@ -286,3 +286,7 @@
 	qcom,cont-splash-enabled;
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
 };
+
+&sdc1_clk_on {
+	drive-strength = <10>; /* 10 MA */
+};
