wcnss: Add VBATT support for MSM8952
- Add ADC entry for wcnss which is use to listen low vbatt
  notification from ADC.
- Prevent sending vbatt notification to FW incase of ADC
  channel not present.

CRs-Fixed: 855069
Change-Id: If53a2d2089f292cbd87418d0a451bd11a0c95322
Signed-off-by: Hardik Kantilal Patel <hkpatel@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8952.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952.dtsi
@@ -1007,6 +1007,8 @@
 		qcom,has-autodetect-xo;
 		qcom,is-pronto-v3;
 		qcom,has-pronto-hw;
+		qcom,has-vsys-adc-channel;
+		qcom,wcnss-adc_tm = <&pm8950_adc_tm>;
 	};
 
 	qcom,usbbam@78c4000 {
