--- a/arch/arm/boot/dts/qcom/msm8976.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976.dtsi
@@ -103,6 +103,13 @@
 			linux,reserve-contiguous-region;
 			reg = <0x0 0x0 0x0 0x314000>;
 		};
+
+		cont_splash_mem: splash_region@83000000 {
+			linux,reserve-contiguous-region;
+			linux,reserve-region;
+			reg = <0x0 0x83000000 0x0 0x2800000>;
+			label = "cont_splash_mem";
+		};
 	};
 };
 
