--- a/arch/arm/boot/dts/qcom/msm8976-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-mtp.dtsi
@@ -175,6 +175,7 @@
 };
 
 &dsi_dual_nt35597_video {
+	qcom,cont-splash-enabled;
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
 	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
 	qcom,mdss-dsi-bl-min-level = <1>;
