ARM: dts: msm: use gpio 25 for cti trigout use case on msm8996
GPIO 4 is not accessible on msm8996 MTP devices for CTI trigout
use case. Use GPIO 25 instead of GPIO 4 on msm8996 for this use
case.

Change-Id: Ice6b47c688ff3281627889144a1d68c2887640f8
Signed-off-by: Sarangdhar Joshi <spjoshi@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8996-coresight-v2.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-coresight-v2.dtsi
@@ -686,7 +686,7 @@
 
 		qcom,cti-gpio-trigout = <2>;
 		pinctrl-names = "cti-trigout-pctrl";
-		pinctrl-0 = <&trigout_b>;
+		pinctrl-0 = <&trigout_a>;
 	};
 
 	cti7: cti@3017000 {
