ARM: dts: msm: Add right number of clock freqs for eMMC ICE on 8996
ICE node for eMMC storage is using four clocks but specifying
frequencies only for two clocks. This is causing ICE probe to fail.
Adding missing clock frequencies.

Change-Id: I30f444ee6ce91373f0e0eb57d370a95679f865cf
Signed-off-by: Dinesh K Garg <dineshg@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996.dtsi
@@ -1219,7 +1219,7 @@
 			 <&clock_gcc clk_gcc_sdcc1_ice_core_clk>,
 			 <&clock_gcc clk_gcc_sdcc1_apps_clk>,
 			 <&clock_gcc clk_gcc_sdcc1_ahb_clk>;
-		qcom,op-freq-hz = <300000000>, <0>;
+		qcom,op-freq-hz = <300000000>, <0>, <0>, <0>;
 		qcom,msm-bus,name = "sdcc_ice_noc";
 		qcom,msm-bus,num-cases = <2>;
 		qcom,msm-bus,num-paths = <1>;
