--- a/arch/arm/boot/dts/qcom/msm8956-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-cdp.dtsi
@@ -38,6 +38,12 @@
 			synaptics,panel-coords = <0 0 1439 2703>;
 			synaptics,key-codes = <158 139 172 217>;
 		};
+		synaptics,device2 {
+			synaptics,package-id = <3408>;
+			synaptics,display-coords = <0 0 1079 1919>;
+			synaptics,panel-coords = <0 0 1079 2063>;
+			synaptics,key-codes = <158 139 172 217>;
+		};
 	};
 };
 
