--- a/arch/arm/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996.dtsi
@@ -2040,11 +2040,10 @@
 			<&clock_gcc clk_gcc_aggre2_usb3_axi_clk>,
 			<&clock_gcc clk_gcc_usb30_mock_utmi_clk>,
 			<&clock_gcc clk_gcc_usb30_sleep_clk>,
-			<&clock_gcc clk_ln_bb_clk>,
 			<&clock_gcc clk_cxo_dwc3_clk>;
 
 		clock-names = "core_clk", "iface_clk", "bus_aggr_clk", "utmi_clk",
-				"sleep_clk", "ref_clk", "xo";
+				"sleep_clk", "xo";
 
 		dwc3@6a00000 {
 			compatible = "snps,dwc3";
