--- a/arch/arm64/configs/msm_defconfig
+++ b/arch/arm64/configs/msm_defconfig
@@ -534,6 +534,8 @@ CONFIG_FAULT_INJECTION_STACKTRACE_FILTER=y
 CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
 CONFIG_IPC_LOGGING=y
+CONFIG_IRQSOFF_TRACER=y
+CONFIG_PREEMPT_TRACER=y
 CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
