--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -937,6 +937,16 @@ config REGULATOR_WM8994
 	  This driver provides support for the voltage regulators on the
 	  WM8994 CODEC.
 
+config REGULATOR_RPMH
+	tristate "Qualcomm Technologies, Inc. RPMh regulator driver"
+	depends on OF
+	depends on QTI_RPMH_API
+	help
+	  This driver supports control of PMIC regulators via the RPMh hardware
+	  block found on Qualcomm Technologies Inc. SoCs.  RPMh regulator
+	  control allows for voting on regulator state between multiple
+	  processors within the SoC.
+
 config REGULATOR_STUB
 	tristate "Stub Regulator"
 	help
