ARM: dts: msm: Add PM support for sdm630
Add initial PM configuration necessary for SPM, LPM, MPM,
RPM stats to support SDM630.

Change-Id: I2e9ab91d8b0240a75198e489663ff794be3ee7ec
Signed-off-by: Raju P.L.S.S.S.N <rplsssn@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/sdm630.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm630.dtsi
@@ -1395,6 +1395,7 @@
 #include "sdm660-common.dtsi"
 #include "msm-arm-smmu-630.dtsi"
 #include "sdm660-camera.dtsi"
+#include "sdm630-pm.dtsi"
 
 &gdsc_usb30 {
 	status = "ok";
