ARM: dts: msm: enable pin control mode for RF clock of wcn3990 on sdm660
RF clock of wcn3990 follows SW_CTRL pin. Enable this configuration for
lower power with BT/FM use cases.

CRs-Fixed: 2000919
Change-Id: I547d27a1d22824fa39578b65fdfffa6ce52c00cf
Signed-off-by: Rupesh Tatiya <rtatiya@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/sdm660.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660.dtsi
@@ -356,7 +356,7 @@
 		qca,bt-vdd-pa-supply = <&pm660_l6_pin_ctrl>;
 		qca,bt-vdd-ldo-supply = <&pm660_l19_pin_ctrl>;
 		qca,bt-chip-pwd-supply = <&pm660l_bob_pin1>;
-		clocks = <&clock_rpmcc RPM_RF_CLK1>;
+		clocks = <&clock_rpmcc RPM_RF_CLK1_PIN>;
 		clock-names = "rf_clk1";
 
 		qca,bt-vdd-core-voltage-level = <1800000 1900000>;
