--- a/arch/arm/boot/dts/qcom/msm-pm660.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pm660.dtsi
@@ -517,8 +517,10 @@
 				reg = <0x4000 0x100>;
 				interrupts = <0x0 0x40 0x0 IRQ_TYPE_EDGE_BOTH>,
 					     <0x0 0x40 0x1 IRQ_TYPE_EDGE_BOTH>,
-					     <0x0 0x40 0x2 IRQ_TYPE_EDGE_BOTH>,
-					     <0x0 0x40 0x3 IRQ_TYPE_EDGE_BOTH>,
+					     <0x0 0x40 0x2
+							IRQ_TYPE_EDGE_RISING>,
+					     <0x0 0x40 0x3
+							IRQ_TYPE_EDGE_RISING>,
 					     <0x0 0x40 0x4 IRQ_TYPE_EDGE_BOTH>,
 					     <0x0 0x40 0x5
 							IRQ_TYPE_EDGE_RISING>,
