ARM: dts: msm: Enable CXIP LM feature for sdm660
Enable CXIP LM feature in KTM for monitoring CX Tj and set/clear
thermal vote to CXIP LM when Tj violates predefined thresholds.

Change-Id: Id49f480b33364146d1c8fcdb77b857cfe261774e
Signed-off-by: Manaf Meethalavalappu Pallikunhi <manafm@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/sdm660.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660.dtsi
@@ -726,7 +726,7 @@
 
 		clock-names = "osm";
 		clocks = <&clock_cpu PWRCL_CLK>;
-
+		qcom,cxip-lm-enable = <1>;
 		qcom,vdd-restriction-temp = <5>;
 		qcom,vdd-restriction-temp-hysteresis = <10>;
 
