ARM: dts: msm: Add revid phandle to read FAB ID for PM660
Temperature compensation is needed for charger die
temperature. Offset and slope coefficients are applied
based on the FAB ID read from the REVID peripheral.

Change-Id: I0bd5712b17b11c245da6d737ea0994e7f17d9837
Signed-off-by: Rama Krishna Phani A <rphani@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm-pm660.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pm660.dtsi
@@ -497,6 +497,7 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 			#io-channel-cells = <1>;
+			qcom,pmic-revid = <&pm660_revid>;
 		};
 
 		pm660_fg: qpnp,fg {
