ARM: dts: msm: enable ESD feature for SDM660 target
Enable ESD check feature for SDM660 target by adding
the property flag to default panel node.

Change-Id: Icbd99fdbe4283407f94e60e3fe06b845a21846fd
Signed-off-by: Sandeep Panda <spanda@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/sdm660-mdss-panels.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660-mdss-panels.dtsi
@@ -78,6 +78,8 @@
 		23 1e 07 08 05 03 04 a0
 		23 1e 07 08 05 03 04 a0
 		23 18 07 08 04 03 04 a0];
+	qcom,esd-check-enabled;
+	qcom,mdss-dsi-panel-status-check-mode = "bta_check";
 };
 
 &dsi_dual_nt35597_truly_cmd {
