regulator: kryo-regulator: correct various coding style issues
Correct warnings flagged by checkpatch.  In particular, modify
the following:

 - Use octal file permissions instead of symbolic.

 - Add 'const' to the type of a struct of_device_id variable.

 - Remove unnecessary out-of-memory error messages.

 - Change variables of type 'unsigned' to 'unsigned int'.

 - Update the REGULATOR_KRYO Kconfig entry.

Change-Id: Iad0fcbcc8f276f4f8344b6fc8591cfbe604659fa
Signed-off-by: David Collins <collinsd@codeaurora.org>

--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -950,10 +950,10 @@ config REGULATOR_KRYO
 	depends on OF
 	help
 	  Some MSM designs have CPUs that can be directly powered from a common
-	  voltage rail via a Block Head Switch (BHS) or an LDO whose output voltage
-	  can be configured for use when certain power constraints are met.
-	  Say yes to support management of LDO and BHS modes for the clusters in the
-	  CPU subsystem.
+	  voltage rail via a Block Head Switch (BHS) or an LDO whose output
+	  voltage can be configured for use when certain power constraints are
+	  met.  Say yes to support management of LDO and BHS modes for the
+	  clusters in the CPU subsystem.
 
 config REGULATOR_MEM_ACC
         tristate "QTI Memory accelerator regulator driver"
