--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -956,13 +956,12 @@ config REGULATOR_KRYO
 	  clusters in the CPU subsystem.
 
 config REGULATOR_MEM_ACC
-        tristate "QTI Memory accelerator regulator driver"
-        help
-         Say y here to enable the memory accelerator driver for Qualcomm
-         Technologies (QTI) chips. The accelerator controls delays applied
-         for memory accesses.
-         This driver configures the power-mode (corner) for the memory
-         accelerator.
+	tristate "QTI Memory accelerator regulator driver"
+	help
+	  Say y here to enable the memory accelerator driver for Qualcomm
+	  Technologies, Inc. (QTI) chips. The accelerator controls delays
+	  applied for memory accesses.  This driver configures the power-mode
+	  (corner) for the memory accelerator.
 
 config REGULATOR_PROXY_CONSUMER
 	bool "Boot time regulator proxy consumer support"
