regulator: qpnp-regulator: correct various coding style issues
Correct warnings flagged by checkpatch.  In particular, modify
the following:

 - Use octal file permissions instead of symbolic.

 - Add 'const' to type of struct of_device_id variables.

 - Remove unnecessary out-of-memory error messages.

 - Change variables of type 'unsigned' to 'unsigned int'.

 - Restructure conditionals to avoid else after return/break.

 - Remove 'return' from the end of void functions.

 - Join strings that are wrapped across two lines.

 - Remove ';' from the end of a macro definition.

 - Update the REGULATOR_QPNP Kconfig entry and the device tree
   documentation to use the name: 'Qualcomm Technologies, Inc.'

Change-Id: I9f2cde58929ae57667366bb886e65154d36dfd3d
Signed-off-by: David Collins <collinsd@codeaurora.org>

--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -807,13 +807,14 @@ config REGULATOR_RPM_SMD
 	  application processor over SMD.
 
 config REGULATOR_QPNP
+	tristate "Qualcomm Technologies, Inc. QPNP regulator support"
 	depends on SPMI
-	tristate "Qualcomm QPNP regulator support"
 	help
-	  This driver supports voltage regulators in Qualcomm PMIC chips which
-	  comply with QPNP.  QPNP is a SPMI based PMIC implementation.  These
-	  chips provide several different varieties of LDO and switching
-	  regulators.  They also provide voltage switches and boost regulators.
+	  This driver supports voltage regulators in Qualcomm Technologies, Inc.
+	  PMIC chips which comply with QPNP.  QPNP is a SPMI based PMIC
+	  implementation.  These chips provide several different varieties of
+	  LDO and switching regulators.  They also provide voltage switches and
+	  boost regulators.
 
 config REGULATOR_QPNP_LABIBB
 	depends on SPMI
