ARM: dts: msm: Enable WSA for sdm660 internal codec
Update internal codec nodes to enable WSA speakers.

Change-Id: I4b356eb7a5139fc94d9c6a08c15217116a6451df
Signed-off-by: Laxminath Kasam <lkasam@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/sdm660-audio.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660-audio.dtsi
@@ -217,6 +217,7 @@
 		reg = <0x152c1000 0x0>;
 		interrupts = <0 161 0>;
 		interrupt-names = "swr_master_irq";
+		qcom,cdc-sdw-gpios = <&cdc_sdw_gpios>;
 
 		swr_master {
 			compatible = "qcom,swr-wcd";
