leds: leds-qpnp: correct various coding style issues
Correct warnings flagged by checkpatch.  In particular, modify
the following:

 - Add 'const' to the type of a struct of_device_id variable.

 - Remove unnecessary out-of-memory error messages.

 - Restructure conditionals to avoid else after return.

 - Replace kzalloc() with kcalloc() for arrays.

 - Replace strncmp() with strcmp().

 - Join strings that are wrapped across two lines.

 - Correct the format of block comments.

 - Remove 'return' from the end of void functions.

 - Remove unnecessary parentheses.

 - Remove unnecessary line continuations.

 - Call usleep_range() with max > min.

 - Update the LEDS_QPNP Kconfig entry and the device tree
   documentation to use the name: 'Qualcomm Technologies, Inc.'

 - Expand the description of the LEDS_QPNP config option.

 - Correct the spelling of 'controlled'.

Change-Id: Id29de0da18aa1ce75a0c7604b8c0ecd1633fcaf3
Signed-off-by: David Collins <collinsd@codeaurora.org>

--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -591,11 +591,10 @@ config LEDS_QPNP
 	tristate "Support for QPNP LEDs"
 	depends on LEDS_CLASS && SPMI
 	help
-	  This driver supports the leds functionality of Qualcomm PNP PMIC.  It
-	  includes RGB Leds, WLED and Flash Led.
-
-	  To compile this driver as a module, choose M here: the module will
-	  be called leds-qpnp.
+	  This driver supports the LED functionality of Qualcomm Technologies,
+	  Inc. QPNP PMICs.  It primarily supports controlling tri-color RGB
+	  LEDs in both PWM and light pattern generator (LPG) modes.  For older
+	  PMICs, it also supports WLEDs and flash LEDs.
 
 config LEDS_QPNP_FLASH
 	tristate "Support for QPNP Flash LEDs"
