--- a/arch/arm/boot/dts/qcom/sdm630.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm630.dtsi
@@ -1522,6 +1522,7 @@
 #include "msm-arm-smmu-630.dtsi"
 #include "sdm660-camera.dtsi"
 #include "sdm630-pm.dtsi"
+#include "sdm660-vidc.dtsi"
 
 &gdsc_usb30 {
 	status = "ok";
