ARM: dts: msm: add sink capabilities to PMI8998 PD PHY
Add a property to the PD PHY peripheral to specify the default
sink capabilities for USB PD as 5V @ 3A, 9V @ 3A and 12V @ 2.25A.
These are common values that should be supported on most boards,
but can be overridden as necessary.

Change-Id: I5ea95d2f0532c59f7d83cb608d939ad28a8bb28e
Signed-off-by: Jack Pham <jackp@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm-pmi8998.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8998.dtsi
@@ -290,6 +290,10 @@
 					  "msg-tx-failed",
 					  "msg-tx-discarded",
 					  "msg-rx-discarded";
+
+			qcom,default-sink-caps = <5000 3000>, /* 5V @ 3A */
+						 <9000 3000>, /* 9V @ 3A */
+						 <12000 2250>; /* 12V @ 2.25A */
 		};
 
 		bcl@4200 {
