drivers: soc: qcom: Add snapshot of EUD driver
Snapshot of EUD driver as of msm-4.9 commit <70be28c9d8067d0>
(Merge "mmc: sdhci-msm-ice: Factor out update config from
sdhci_msm_ice_cfg").

Change-Id: Ia9c67a11ad1cc8c1b631c9a2164b4d04fbb728c9
Signed-off-by: Prasad Sodagudi <psodagud@codeaurora.org>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -243,3 +243,14 @@ config ICNSS_DEBUG
 	  primarily consists of logs consisting of information related to
 	  hardware register access and enabling BUG_ON for certain cases to aid
 	  the debugging.
+
+config QCOM_EUD
+	tristate "QTI Embedded USB Debugger (EUD)"
+	depends on ARCH_QCOM
+	select SERIAL_CORE
+	help
+	  The EUD (Embedded USB Debugger) is a mini-USB hub implemented
+	  on chip to support the USB-based debug and trace capabilities.
+	  This module enables support for Qualcomm Technologies, Inc.
+	  Embedded USB Debugger (EUD).
+	  If unsure, say N.
