soc: qcom: Add snapshot of gladiator erp driver
Add support for gladiator cache interconnect error detection.
Snapshot of gladiator erp driver as of msm-4.9
commit <70be28c9d8067d0> (Merge "mmc: sdhci-msm-ice: Factor
out update config from sdhci_msm_ice_cfg").

Change-Id: Ic6d24f0535b90d916a8d1f470b391807e82e194e
Signed-off-by: Kyle Yan <kyan@codeaurora.org>
Signed-off-by: Prasad Sodagudi <psodagud@codeaurora.org>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -211,12 +211,31 @@ config MSM_CORE_HANG_DETECT
 	 enabled or disabled dynamically.
 
 config MSM_GLADIATOR_HANG_DETECT
-       tristate "MSM Gladiator Hang Detection Support"
-       help
-         This enables the gladiator hang detection module.
-         If the configured threshold is reached, it causes SoC reset on
-         gladiator hang detection and collects the context for the
-         gladiator hang.
+	tristate "MSM Gladiator Hang Detection Support"
+	help
+	  This enables the gladiator hang detection module.
+          If the configured threshold is reached, it causes SoC reset on
+          gladiator hang detection and collects the context for the
+          gladiator hang.
+
+config MSM_GLADIATOR_ERP
+	tristate "GLADIATOR coherency interconnect error reporting driver"
+	help
+	  Support dumping debug information for the GLADIATOR
+	  cache interconnect in the error interrupt handler.
+	  Meant to be used for debug scenarios only.
+
+	  If unsure, say N.
+
+config PANIC_ON_GLADIATOR_ERROR
+	depends on MSM_GLADIATOR_ERP
+	bool "Panic on GLADIATOR error report"
+	help
+	  Panic upon detection of an Gladiator coherency interconnect error
+	  in order to support dumping debug information.
+	  Meant to be used for debug scenarios only.
+
+	  If unsure, say N.
 
 config QCOM_SECURE_BUFFER
 	bool "Helper functions for securing buffers through TZ"
