ARM: dts: msm: Add smem configuration on sdm855
Add new entry in device tree for smem region. This smem
region is used to pass data to remote processors.

CRs-Fixed: 2093992
Change-Id: I04ebe7fc21c5921c202c54b4e333f50cc1b6cad1
Signed-off-by: Chris Lew <clew@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/sdm855.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm855.dtsi
@@ -333,6 +333,11 @@
 			size = <0x0 0x2000000>;
 			linux,cma-default;
 		};
+
+		smem_region: smem@86000000 {
+			no-map;
+			reg = <0x0 0x86000000 0x0 0x200000>;
+		};
 	};
 };
 
@@ -571,6 +576,12 @@
 		compatible = "qcom,tcsr-mutex";
 		syscon = <&tcsr_mutex_block 0 0x1000>;
 		#hwlock-cells = <1>;
+	};
+
+	smem: qcom,smem@8600000 {
+		compatible = "qcom,smem";
+		memory-region = <&smem_region>;
+		hwlocks = <&tcsr_mutex 3>;
 	};
 };
 
