ARM: dts: msm: Add the npu_core GDSC support for SDM855
Add a dummy regulator for the npu_core_gdsc on SDM855.

Change-Id: I264ac7c36b0a628092d3132f1b53bc823bfc7fc4
Signed-off-by: Deepak Katragadda <dkatraga@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/sdm855-gdsc.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm855-gdsc.dtsi
@@ -244,4 +244,12 @@
 		reg = <0xab008b4 0x4>;
 		status = "disabled";
 	};
+
+	/* GDSCs in NPU CC */
+	npu_core_gdsc: qcom,gdsc@0x9911028 {
+		compatible = "regulator-fixed";
+		regulator-name = "npu_core_gdsc";
+		reg = <0x9911028 0x4>;
+		status = "disabled";
+	};
 };
