--- a/arch/arm64/configs/sdm855_defconfig
+++ b/arch/arm64/configs/sdm855_defconfig
@@ -310,6 +310,7 @@ CONFIG_ION_MSM=y
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_QCOM=y
 CONFIG_ARM_SMMU=y
+CONFIG_QCOM_SMEM=y
 CONFIG_QCOM_SCM=y
 CONFIG_IIO=y
 CONFIG_PWM=y
