--- a/arch/arm/boot/dts/qcom/apq8096pro-v1.1-auto-adp-lite.dts
+++ b/arch/arm/boot/dts/qcom/apq8096pro-v1.1-auto-adp-lite.dts
@@ -1,4 +1,4 @@
-/* Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2015-2017, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -42,6 +42,10 @@
 
 	i2c@75b6000 { /* BLSP8 */
 		/* ADV7533 HDMI Bridge Chip removed on ADP Lite */
+		adv7533@3d {
+			status = "disabled";
+		};
+
 		adv7533@39 {
 			status = "disabled";
 		};
@@ -58,6 +62,10 @@
 
 &dsi_adv_7533_2 {
 	/delete-property/ qcom,dsi-display-active;
+};
+
+&sde_kms {
+	connectors = <&sde_hdmi_tx &sde_hdmi &dsi_adv_7533_1>;
 };
 
 &pil_modem {
