--- a/arch/arm/boot/dts/qcom/sdm636.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm636.dtsi
@@ -16,4 +16,24 @@
 	model = "Qualcomm Technologies, Inc. SDM 636";
 	compatible = "qcom,sdm636";
 	qcom,msm-id = <345 0x0>;
+
+};
+
+&soc {
+	devfreq_memlat_4: qcom,arm-memlat-mon-4 {
+		qcom,core-dev-table =
+		< 1113600 762 >,
+		< 1401600 3879 >,
+		< 1804800 5163 >;
+	};
+
+	devfreq_cpufreq: devfreq-cpufreq {
+		mincpubw-cpufreq {
+			cpu-to-dev-map-4 =
+				< 1113600 762 >,
+				< 1401600 2086 >,
+				< 1747200 2929 >,
+				< 1804800 5163 >;
+		};
+	};
 };
